Fix users container overflow

--- a/sass/_chat.scss
+++ b/sass/_chat.scss
@@ -41,7 +41,7 @@ chat {
 
 		height: 100%;
 		min-width: 20rem;
-		padding: 1rem;
+		padding: 1rem 0;
 		border-radius: 0.5rem;
 		background-color: rgba($color-white, 0.1);
 
@@ -49,6 +49,7 @@ chat {
 			@include display-flex(column, flex-start, center, 1rem);
 
 			width: 100%;
+			padding: 0 1rem;
 			border-bottom: 2px solid rgba($color-white, 0.1);
 
 			input {
@@ -62,6 +63,8 @@ chat {
 			
 			width: 100%;
 			height: 100%;
+			padding: 0 0.5rem;
+			overflow-y: auto;
 			
 			&[subtitle] {
 				margin-bottom: 1rem;
@@ -71,10 +74,6 @@ chat {
 				content: attr(subtitle);
 				font-style: italic;
 				opacity: 0.8;
-			}
-
-			.loader {
-				inset: -0.5rem;
 			}
 
 			.user {
